--- a/ManageTrip/templates/index.html
+++ b/ManageTrip/templates/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="http://127.0.0.1:8080/favicon.ico">
     <title>QuestionTime</title>
     <link rel="stylesheet" href="style.css">
-  <link href="http://127.0.0.1:8080/js/todo-editor.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/trip-editor.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/trip.js" rel="prefetch"><link href="http://127.0.0.1:8080/trip.cf21ca4ce3d236a62b72.hot-update.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/chunk-vendors.js" rel="preload" as="script"><link href="http://127.0.0.1:8080/js/index.js" rel="preload" as="script"></head>
+    <script src="https://cdn.tailwindcss.com"></script>
+  <link href="http://127.0.0.1:8080/js/todo-editor.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/trip-editor.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/trip.js" rel="prefetch"><link href="http://127.0.0.1:8080/trip.1a5e0361021004229df3.hot-update.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/chunk-vendors.js" rel="preload" as="script"><link href="http://127.0.0.1:8080/js/index.js" rel="preload" as="script"></head>
   <body>
     <noscript>
       <strong>We're sorry but QuestionTime doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
